feat: created simple version of Course, CourseRepository and CourseQueryService to pass the test